--- a/settings.ini
+++ b/settings.ini
@@ -4,3 +4,4 @@ Pop up duration (seconds) = 20
 Play sound before pop up = 1
 Block mouse and keyboard during pop up = 0
 Press key before and after popup = space
+Click on center of active window = 1
